Pretttyprinted "special root" documents shouldn't load styleshets or execute scripts.  Bug 230579, r=sicking, sr=peterv